[gd_scene load_steps=2 format=3 uid="uid://p4u5e0m3nuz1b"]

[ext_resource type="Script" uid="uid://p4u5e0m3nuz1a" path="res://ui/pause_menu/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Dim" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(260, 0)

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
text = "Save (default slot)"

[node name="LoadButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
text = "Load (default slot)"

[node name="QuitToMenuButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
text = "Quit Desktop"

